@@ -15,6 +15,10 @@ Next release
   asset specs.
   https://github.com/Pylons/pyramid/issues/662
 
+- When registering multiple views with an ``accept`` predicate in a Pyramid
+  application runing under Python 3, you might have received a ``TypeError:
+  unorderable types: function() < function()`` exception.
+
 1.3.3 (2012-08-10)
 ==================
 
